more stuff in contact section

--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -866,16 +866,16 @@
       <!-- Section Contact -->
       <section id="contact">
          <div class="container">
-            <div class="col-lg-7 col-md-7">
+            <div class="row">
                <!-- Section heading -->
                <div class="section-heading">
                   <h2>Contact Us</h2>
                   <div class="hr"></div>
                </div>
             </div>
+            <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
             <!-- Contact Form -->
-            <div>
-               <div class="col-lg-7 col-md-7 text-left timetable res-margin">
+               <div class="text-left timetable res-margin">
                   <!-- Sign-->
                   <h6 class="align-center">HOURS @ The MARKET</h6>
                   <!-- Table-->
@@ -896,10 +896,6 @@
                      </tbody>
                   </table>
                </div>
-            </div>
-            <div class="row">
-               <div class="col-lg-7 col-md-7">
-
                   <!-- <h4>Get in touch with us</h4> -->
                   <p>We are located in the MARKET (at the Fareway), formerly known as the Chestnut Hill Farmers Market. Our address is Germantown Avenue; however, the MARKET is not directly on Germantown Avenue; it is directly behind the Chestnut Hill Hotel, the Post Office, Green Soul, and Follicles Hair Salon.</p>
                   <p>There is free parking on Southampton Avenue (across from Jenks John S School).</p>
@@ -929,6 +925,9 @@
                   <!--/Contact_form -->
                </div>
                <!-- / col-lg-7-->
+               <div class="col-lg-5 col-md-5 hidden-sm hidden-xs aboutus-img-lrg">
+                  <img src="/barrys_buns/pieceofcake_html/img/bakery_3.jpg">
+               </div>
             </div>
             <!--/row -->            
          </div>
