fixing issue of images not rendering hopefully

--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -52,7 +52,8 @@
                   <li><a href="#page-top">Home</a></li>
                   <li><a href="#about">About us</a></li>
                   <li><a href="#menu">Menu</a></li>
-                  <li><a href="#catering">Catering</a></li>
+                  <li><a href="#wholesale">Wholesale</a></li>
+                  <li><a href="#fundraising">Fundraising</a></li>
                   <li><a href="#contact">Contact</a></li>
                </ul>
             </div>
@@ -102,7 +103,7 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1>Welcome to<br>Barry’s Buns</h1>
+                     <h1><span>Welcome to</span><br>Barry’s Buns</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
                         <p class="subtitle"></p>
                         <div class="page-scroll">
@@ -140,15 +141,15 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1>We Love Buns</h1>
+                     <h1><span>We Love</span><br>Buns</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle">We specialize in gourmet sticky buns<br>and cinnamon buns.</p>
+                        <p class="subtitle">We specialize in gourmet sticky buns<br>and cinnamon rolls.</p>
                         <div class="page-scroll">
                            <!-- Button -->
-                           <a class="btn" href="#contact">
+                           <a class="btn" href="#menu">
                               <div class="btn-line"></div>
                               <div class="btn-line btn-line-shift"></div>
-                              Contact us
+                              Menu
                            </a>
                         </div>
                      </div>
@@ -178,9 +179,9 @@
                   </svg>
                   <!--Title -->
                   <div class="slide__text">
-                     <h1><span>Try our other<br>Tasty Baked Goods</span></h1>
+                     <h1><span>Try our other</span><br>Baked Goods</h1>
                      <div class="hidden-xs hidden-sm hidden-md">
-                        <p class="subtitle">Sticky bun bread pudding, crumb cake, tea cookies, brownies, liege waffles and old time favorites such as German butter caked, seasonal items and more!</p>
+                        <p class="subtitle">Sticky bun bread pudding, crumb cake, tea cookies, brownies, liege waffles, german butter cake, and more!</p>
                         <div class="page-scroll">
                            <!-- Button -->
                            <a class="btn" href="#menu">
@@ -239,7 +240,26 @@
       </div>
       <!-- /slider -->
 
-	  
+	   <!-- Section offer -->  
+      <section id="offer" class="color-section">
+         <div class="container" data-0="background-position:82% 20px;" data-end="background-position:82% 1200px">
+            <div class="col-md-6 text-center">
+               <h4>Seasonal Offers</h4>
+               <p>Coming soon!</p>
+               <!-- Button -->
+               <div class="page-scroll">
+                  <a class="btn" href="#menu">
+                     <div class="btn-line offer"></div>
+                     <div class="btn-line btn-line-shift"></div>
+                     Check our menu
+                  </a>
+               </div>
+            </div>
+         <!-- /col-md-6 -->
+         </div>
+         <!--  container -->
+      </section>
+      <!-- / section -->
 
 	  
       <!-- Section About --> 
@@ -254,9 +274,14 @@
             <!-- Text -->
             <div class="row">
                <!-- image -->
-                  <img class="hidden-xs hidden-sm col-md-4 col-lg-4 aboutus-img-lrg" src="/barrys_buns/pieceofcake_html/img/joel_jen_v3.jpg"/>  
-                  <img id="aboutus-img-sm" class="col-sm-12 hidden-md hidden-lg"/>  
-               <div class="col-lg-8 col-sm-12">
+                  <div class="aboutus-img-lrg polaroid hidden-xs hidden-sm col-md-4 col-lg-4">
+                     <img src="/barrys_buns/polaroidieceofcake_html/img/joel_jen_v3.jpg" class="img-responsive center-block" />
+                  </div>
+                  <div class="hidden-md hidden-lg aboutus-img-container">
+                     <img src="/barrys_buns/pieceofcake_html/img/circle_jen_joel.jpg" alt="" class="img-circle aboutus-img-sml"/>
+                  </div>
+
+               <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 box">
                   <p>Barry’s Buns is family owned business operated by Joel Singer (a.k.a Barry) with the help and support of his wife, Jen. Joel utilizes his expertise in the kitchen and heads up recipe development and production of the tasty baked goods while Jen &#8212; a paralegal and real estate agent by trade &#8212; handles all marketing, brand development, event planning, and business administration.</p>
 
                   <p>Joel was born a baker. He started his own cheesecake business when he was 14 years old and during high school, he was in a culinary competition and took first place winning a $40,000 scholarship from Careers Through Culinary Arts Program (C-CAP) to attend Johnson & Wales University in Rhode Island. Joel graduated with a degree in Pastry Arts and was most recently the Regional Bakery Associate Coordinator of Whole Foods Market for the Mid-Atlantic Region. His formal career in pastry began at the Pennsylvania Convention Center and prior to working at Whole Foods Market, Joel was the Assistant Pastry Chef at The Rittenhouse Hotel under Executive Chef Jean Marie LaCroix.</p>
@@ -268,8 +293,51 @@
 
                </div>
             <!-- /row -->
+            <div id="owl-icons" class="owl-carousel features-icon">
+               <div class="col-sm-12">
+                  <!-- item1 -->
+                  <div class="media text-center">
+                     <i class="flaticon-electric-mixer"></i>
+                     <div class="media-body">
+                        <h5>Made With Love</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-sm-12">
+                  <!-- item2 -->
+                  <div class="media text-center">
+                     <i class="flaticon-gingerbread"></i>
+                     <div class="media-body">
+                        <h5>Seasonal Pastries</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-sm-12">
+                  <!-- item3 -->
+                  <div class="media text-center">
+                     <i class="flaticon-food-5"></i>
+                     <div class="media-body">
+                        <h5>Event Catering</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-sm-12">
+                  <!-- item5 -->
+                  <div class="media text-center">
+                     <i class="flaticon-food-12"></i>
+                     <div class="media-body">
+                        <h5>100% Homemade</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
          </div>
          <!--/container-->
+
       </section>
 	  <!--/section -->
 	  
@@ -356,10 +424,11 @@
                   <!-- required for floating -->
                   <!-- Nav tabs -->
                   <ul class="nav nav-tabs">
-                     <li class="active "><a href="#tab1" data-toggle="tab">Sticky Buns &<br>Cinnamon Rolls</a></li>
+                     <li class="active "><a href="#tab1" data-toggle="tab">Our Buns</a></li>
                      <li><a class="" href="#tab2" data-toggle="tab">Tasty Baked<br>Goods</a></li>
                      <li><a class="" href="#tab3" data-toggle="tab">Bars &<br>Cookies</a></li>
-                     <li><a class="" href="#tab4" data-toggle="tab">Platters &<br>Catering</a></li>
+                     <li><a class="" href="#tab4" data-toggle="tab">Liege Waffles</a></li>
+                     <li><a class="" href="#tab5" data-toggle="tab">Platters &<br>Catering</a></li>
                   </ul>
                </div>
                <div class="col-md-12 no-padding">
@@ -370,7 +439,8 @@
                            <!-- column -->
                            <div class="polaroid col-xs-12 col-md-4">
                               <p>Harry Potter Buns</p>
-                              <img src="/barrys_buns/pieceofcake_html/img/butter_beer_buns_1.jpg" alt="" class="img-responsive center-block" />
+                              <img src="/barrys_buns/pieceofcake_html/img/bu
+                              tter_beer_buns_1.jpg" alt="" class="img-responsive center-block" />
                            </div>
                            <div class="col-xs-12 col-md-8">
                               <div class="menu-body">
@@ -904,7 +974,7 @@
                      <li><i class="fa fa-phone"></i>267-521-BUNS</li>
                      <li><i class="fa fa-envelope"></i><a href="mailto:BarrysBuns@gmail.com">BarrysBuns@gmail.com</a> </li>
                   </ul>
-                  <div class="form-style" id="contact_form">
+                  <div class="form-style" id="contact_form wholesale">
                      <!-- Contact results -->
                      <div id="contact_results"></div>
                      <!-- Form Starts -->
