--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -263,7 +263,7 @@
             <!-- Section Heading -->
             <div class="section-heading">
                <h2>About Us</h2>
-               <div class="hr"></div>
+               <img src="img/bun-icon-hr.svg"/>
             </div>
                       
             <!-- Text -->
@@ -291,8 +291,8 @@
             <div id="owl-icons" class="owl-carousel features-icon">
                <div class="col-sm-12">
                   <!-- item1 -->
-                  <div class="media text-center">
-                     <i class="flaticon-food-12"></i>
+                  <div class="media text-center about-us-icons">
+                     <img src="img/bun-icon.svg">
                      <div class="media-body">
                         <h5>Au Naturale</h5>
                         <p>We do not use any preservatives, artificial flavors or colors in any of our tasty baked goods. There is nothing fake in these buns!</p>
@@ -321,11 +321,11 @@
                </div>
                <div class="col-sm-12">
                   <!-- item4 -->
-                  <div class="media text-center">
-                     <i class="flaticon-food-5"></i>
+                  <div class="media text-center about-us-icons">
+                     <img src="img/waffle-icon.svg">
                      <div class="media-body">
                         <h5>Liege Waffles</h5>
-                        <p>A richer, denser, sweeter, and chewier waffle that is the most common waffle available in Belgium. An adaptation of brioche bread dough with chunks of pearl sugar Be sure to check out our waffle menu.</p>
+                        <p>A richer, denser, sweeter, and chewier waffle that is the most common waffle available in Belgium. An adaptation of brioche bread dough with chunks of pearl sugar. Be sure to check out our waffle menu.</p>
                      </div>
                   </div>
                </div>
@@ -352,7 +352,7 @@
             <!-- Section Heading -->
             <div class="section-heading">
                <h2>What Our Clients Say</h2>
-               <div class="hr"></div>
+               <!-- <img src="img/bun-icon-hr.svg"/> -->
             </div>
             <div class="row">
                <div class="col-md-12">
@@ -484,9 +484,9 @@
             <!-- Section heading -->
             <div class="section-heading">
                <h2>Our Menu</h2>
-               <div class="hr"></div>
+               <img src="img/bun-icon-hr.svg"/>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-12 no-padding">
                <div class="col-md-12 no-padding">
                   <!-- required for floating -->
                   <!-- Nav tabs -->
@@ -919,7 +919,7 @@
                                           $2.50
                                        </div>
                                        <div class="menu-item-description">
-                                        
+                                          A yummy chocolate chip cookie with extra chips!
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -1218,7 +1218,7 @@
                <!-- Section heading -->
                <div class="section-heading">
                   <h2>Contact Us</h2>
-                  <div class="hr"></div>
+                  <img src="img/bun-icon-hr.svg"/>
                </div>
             </div>
             <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
@@ -1339,7 +1339,7 @@
                </div>
                <!-- /col-lg-4 -->
                <div class="col-md-12 text-center">
-                  <p>Copyright © 2016 - Designed by  <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a> | Developed by Jessica Cornell</p>
+                  <p>Copyright © 2017 - Designed by  <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a> | Developed by Jessica Cornell</p>
                   <!-- /container -->
                   <!-- Go To Top Link -->
                   <div class="page-scroll hidden-sm hidden-xs">
