--- a/pieceofcake_html/index.html
+++ b/pieceofcake_html/index.html
@@ -919,7 +919,7 @@
                                           $2.50
                                        </div>
                                        <div class="menu-item-description">
-                                          A yummy chocolate chip cookie with extra chips!
+                                          This is your traditional chocolate chip cookie except Barry's is over loaded with mini chocolate chip morsels
                                        </div>
                                     </div>
                                     <!-- Item ends -->
@@ -1174,16 +1174,16 @@
             <div class="col-lg-5 pull-right">
                <!-- Form -->           
                <div id="mc_embed_signup">
-                  <form action="http://yourlist.us12.list-manage.com/subscribe/post?u=04e646927a196552aaee78a7b&id=111" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <form action="//barrysbuns.us14.list-manage.com/subscribe/post?u=e1333bca0c4365d1505d42f1f&amp;id=d3fd8c326a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                      <div id="mc_embed_signup_scroll">
                         <div class="mc-field-group">
                            <div class="input-group">
-                              <input class="form-control input-lg required email" type="email" value="" name="EMAIL" placeholder="Your email here" id="mce-EMAIL">
+                              <input class="form-control input-lg required email" type="email" value="" name="EMAIL" placeholder="Your email here" id="mce-EMAIL" required>
                               <div class="input-group-btn">
                                  <div class="btn" id="mc-embedded-subscribe">
                                     <div class="btn-line"></div>
                                     <div class="btn-line btn-line-shift"></div>
-                                    Subscribe
+                                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
                                  </div>
                               </div>
                            </div>
