--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@
             <div class="col-lg-5 pull-right">
                <!-- Form -->           
                <div id="mc_embed_signup">
-                  <form action="//barrysbuns.us14.list-manage.com/subscribe/post?u=e1333bca0c4365d1505d42f1f&amp;id=d3fd8c326a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <form action="//barrysbuns.us14.list-manage.com/subscribe/post?u=e1333bca0c4365d1505d42f1f&amp;id=d3fd8c326a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
                      <div id="mc_embed_signup_scroll">
                         <div class="mc-field-group">
                            <div class="input-group">
