let's try this again jessica

--- a/index.html
+++ b/index.html
@@ -1373,6 +1373,14 @@
       <!-- Prefix free CSS -->
       <script src="js/prefixfree.js"></script>	  
       <!-- Slider -->
-      <script src="js/slider.js"></script>  	  
+      <script src="js/slider.js"></script>
+      <script type="text/javascript">
+            $.ajax({
+                url: "https://formspree.io/barrysbuns@gmail.com", 
+                method: "POST",
+                data: {message: "hello!"},
+                dataType: "json"
+            });
+      </script>  
    </body>
 </html>
