--- a/index.html
+++ b/index.html
@@ -1223,27 +1223,24 @@
             </div>
             <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
             <!-- Contact Form -->
-                  <div class="form-style">
+                  <div class="form-style" id="contact_form">
                      <p>Please complete the form below for information regarding wholesale, fundraising or for any questions or comments.  We will get back to you as soon as possible. </p>
                      <!-- Contact results -->
                      <div id="contact_results"></div>
                      <!-- Form Starts -->
-                     <form class="form-group" method="POST" action="http://formspree.io/barrysbuns@gmail.com">
+                     <div class="form-group">
 					 
                         <input type="text" name="name" class="form-control input-field" placeholder="Name" required="">                    
-                        <input type="email" name="_replyto" class="form-control input-field" placeholder="Email" required="">           
+                        <input type="email" name="email" class="form-control input-field" placeholder="Email" required="">           
                         <input type="text" name="subject" class="form-control input-field" placeholder="Subject">                                          
                         <textarea name="message" id="message" class="textarea-field form-control" rows="4" placeholder="Enter your message" required=""></textarea>
-                        <input type="hidden" name="_next" value="//site.io/thanks.html" />
-                        <input type="text" name="_gotcha" style="display:none" />
                         <!-- Button -->
-                        <button class="btn" href="#contact" id="submit_btn" type="submit">
+                        <a class="btn" href="#contact" id="submit_btn">
                            <div class="btn-line"></div>
                            <div class="btn-line btn-line-shift"></div>
                            Send Message
-                        </button>
-
-                     </form>
+                        </a>
+                     </div>
                   </div>
                   <div class="text-left timetable res-margin box">
                   <!-- Sign-->
@@ -1373,14 +1370,6 @@
       <!-- Prefix free CSS -->
       <script src="js/prefixfree.js"></script>	  
       <!-- Slider -->
-      <script src="js/slider.js"></script>
-      <script type="text/javascript">
-            $.ajax({
-                url: "https://formspree.io/barrysbuns@gmail.com", 
-                method: "POST",
-                data: {message: "hello!"},
-                dataType: "json"
-            });
-      </script>  
+      <script src="js/slider.js"></script>  	  
    </body>
 </html>
