--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@
                   </div>
                   <div class="text-left timetable res-margin box">
                   <!-- Sign-->
-                  <h6 class="align-center">HOURS @ The MARKET</h6>
+                  <h6 class="align-center">Hours @ The Market</h6>
                   <!-- Table-->
                   <table class="table">
                      <tbody>
