--- a/index.html
+++ b/index.html
@@ -1242,9 +1242,9 @@
                         </a>
                      </div>
                   </div>
-                  <div class="text-left timetable res-margin box">
+                  <div class="text-left timetable res-margin box first-time">
                   <!-- Sign-->
-                  <h6 class="align-center">Hours @ The Market</h6>
+                  <h5 class="align-center">Hours @ The Market</h5>
                   <!-- Table-->
                   <table class="table">
                      <tbody>
