fixing desktop logo to be bigger and more prominent

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         S289.886,125.549,280.977,118.478z"/>
                   </svg>
                   <!--Title -->
-                  <div class="slide__text">
-                     <h1 class="hidden-sm hidden-xs"><span>Welcome to</span></h1>
+                  <div class="slide__text first-slide-box">
+                     <h1 class="hidden-sm hidden-xs first-slide-text"><span>Welcome to</span></h1>
                      <div class="first-slide-logo"><img src="img/barrys-full-logo.png"/></div>
                   </div>
                   <!--/Slide__text -->
